# PaperBanana

./: .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt
.github/workflows/: ci.yml
agents/: critic_agent.py  planner_agent.py  polish_agent.py  stylist_agent.py  vanilla_agent.py  visualizer_agent.py
configs/: model_config.template.yaml
scripts/: run_demo.sh  run_main.sh
src/: config.rs  eval_toolkits.rs  generation_utils.rs  image_utils.rs  lib.rs  main.rs  processor.rs
src/agents/: base_agent.rs  critic_agent.rs  mod.rs  planner_agent.rs  polish_agent.rs  retriever_agent.rs  stylist_agent.rs  vanilla_agent.rs  visualizer_agent.rs
src/prompts/: diagram_eval_prompts.rs  mod.rs  plot_eval_prompts.rs
tests/: conftest.py  test_ark_api_compatibility.py  test_config_utils.py  test_doubao_api.py  test_format_converters.py  test_image_utils.py  test_model_dispatcher.py  test_openai_image_api.py
utils/: generation_utils.py
